--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@noble/curves": "^1.9.7",
     "@noble/hashes": "^1.8.0",
+    "@noble/secp256k1": "^3.0.0",
     "@openzeppelin/contracts": "^5.4.0"
   },
   "devDependencies": {
