Refactor .gitignore formatting; remove section headers and improve readability

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ broadcast/
 lib/
 gas-snapshot.txt
 
-# ======================
-# 🔐 Environment & Credentials
-# ======================
+
+# Environment & Credentials
+
 .env
 .env.*
 !.env.example
@@ -15,18 +15,18 @@ node_modules/
 __pycache__/
 *.pyc
 getPubKey.js
-# ======================
-# 🧩 IDE / System Files
-# ======================
+
+#  IDE / System Files
+
 .vscode/
 .idea/
 .DS_Store
 Thumbs.db
 *.log
 
-# ======================
-# 🧪 Test artifacts
-# ======================
+
+# Test artifacts
+
 *.json
 *.bin
 *.abi
