--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,6 @@ optimizer = true
 optimizer_runs = 200
 via_ir = true
 evm_version = 'shanghai'
-
+dotenv = ".env"
 [rpc_endpoints]
 anvil ="http://127.0.0.1:8545"
