--- a/foundry.toml
+++ b/foundry.toml
@@ -1,12 +1,10 @@
 [profile.default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-solc_version = '0.8.24'
+src = "src"
+out = "out"
+libs = ["lib"]
+solc_version = "0.8.24"
 optimizer = true
 optimizer_runs = 200
-via_ir = true
-evm_version = 'shanghai'
-dotenv = ".env"
+
 [rpc_endpoints]
-anvil ="http://127.0.0.1:8545"
+anvil = "http://127.0.0.1:8545"
