--- a/foundry.toml
+++ b/foundry.toml
@@ -2,10 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc_version = "0.8.24"
+via_ir = true
 optimizer = true
 optimizer_runs = 200
-via_ir = true  
-
-[rpc_endpoints]
-anvil = "http://127.0.0.1:8545"
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/"
+]
